fixed button animation/margin on "View on GitHub"

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -554,6 +554,7 @@ a:hover {
                 background-color 0.3s,
                 border-color 0.3s,
                 border-width 0.3s,
+                margin-bottom 0.3s
 }
 
 .btn#current,
@@ -563,6 +564,11 @@ a:hover {
     background-color: #5e5f68;
     border-width: 2px;
     border-color: #eeeeee;
+    margin-bottom: 8px;
+}
+
+.btn#view-on-github:hover {
+    margin-bottom: 6px;
 }
 
 .btn+.btn {
