surely it works this time

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -554,7 +554,6 @@ a:hover {
                 background-color 0.3s,
                 border-color 0.3s,
                 border-width 0.3s,
-                margin-bottom 0.4s
 }
 
 .btn#current,
@@ -564,11 +563,10 @@ a:hover {
     background-color: #5e5f68;
     border-width: 2px;
     border-color: #eeeeee;
-    margin-bottom: 8px;
 }
 
 .btn#view-on-github:hover {
-    margin-bottom: 6px;
+    border-width: 1px;
 }
 
 .btn+.btn {
